...
    <string name="hintPeriod">12</string>
    <string name="currency">€</string>
    <string name="signOut">Sign out</string>
    <string name="welcome">Welcome, %s</string>
    <string name="months">months</string>

    <string name="errorPersonalCode">You input wrong personal code.</string>
    <string name="refusedByDebt">You have debt. Cannot continue to calculate loan.</string>
    <string name="wrongType">You input is wrong. Please fix it.</string>
    <string name="errorLoanTooSmall">Your input loan amount too small. Minimum is %s</string>
    <string name="errorLoanTooBig">Your input loan amount too big. Maximum is %s</string>
    <string name="errorLoanPeriodTooSmall">Your input loan period too small. Minimum is %s</string>
    <string name="errorLoanPeriodTooBig">Your input loan period too big. Maximum is %s</string>
...
